# sirens-of-uqbar

./: .env.local  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  pyproject.toml
addresses/: dev.json  local.json
contracts/: ERC721_Base.cairo  ERC721_VRF_Mint.cairo  Whitelist.cairo
contracts/mocks/: Mock_RNG_Oracle.cairo
metadata/unshuffled/: template.json
scripts/: deploy.ts
shuffle/: hash_shuffle.sh  shuffle.js
src/: generate_whitelist_signatures.py  hash_metadata.sh  shuffle.js  utils.ts  whitelist.json  whitelist_output_test.json  whitelist_test.json
test/: testNft.ts
