[tool.poetry]
name = "Galaxy Girls"
version = "0.3.0"
description = "Uqbar's NFTs"
authors = ["tadad"]
license = "Apache-2.0"
repository = "https://github.com/uqbar_dao"
readme = "README.md"
keywords = ["starknet", "immutablex", "cairo", "nft", "template"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
cairo-lang = "^0.10.0"
immutablex-starknet = "0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
